--- a/corn-prices.html
+++ b/corn-prices.html
@@ -137,6 +137,7 @@
                 <a href="/corn-prices.html" class="active">🌽 Corn</a>
                 <a href="/soybean-prices.html">🫘 Soybeans</a>
                 <a href="/wheat-prices.html">🌾 Wheat</a>
+                <a href="/milk-prices.html">🥛 Milk</a>
             </div>
 
             <div class="dash-hero">
