--- a/soybean-prices.html
+++ b/soybean-prices.html
@@ -93,6 +93,7 @@
                 <a href="/corn-prices.html">🌽 Corn</a>
                 <a href="/soybean-prices.html" class="active">🫘 Soybeans</a>
                 <a href="/wheat-prices.html">🌾 Wheat</a>
+                <a href="/milk-prices.html">🥛 Milk</a>
             </div>
 
             <div class="dash-hero">
