--- a/wheat-prices.html
+++ b/wheat-prices.html
@@ -91,6 +91,7 @@
                 <a href="/corn-prices.html">🌽 Corn</a>
                 <a href="/soybean-prices.html">🫘 Soybeans</a>
                 <a href="/wheat-prices.html" class="active">🌾 Wheat</a>
+                <a href="/milk-prices.html">🥛 Milk</a>
             </div>
 
             <div class="dash-hero">
